add logic to parse italics

--- a/content/api.mdx
+++ b/content/api.mdx
@@ -1,6 +1,6 @@
 # My Awesome API Documentation
 
-This document provides an overview of the available API endpoints and their functionalities. You can find detailed information about request parameters, responses, and data models in the reference section.
+This document provides an overview of the available API endpoints and their functionalities. You can find detailed information about *request parameters*, _responses_, and _data models_ in the reference section.
 
 ## Introduction
 
