--- a/content/api.mdx
+++ b/content/api.mdx
@@ -21,3 +21,5 @@ const authHeader = {
   Authorization: `Bearer ${yourAPIKey}`,
 };
 ```
+
+Please check [here](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Authorization) for more details about authorization header.
